# OSDEE

./: .gitignore  Pipfile  README.md  config.ini  main.py  prim_main.py  pyproject.toml  requirements.in  run_tests.py  testing.py
OSDEE/: __init__.py
OSDEE/__src__/: OSDEE.py
OSDEE/__src__/load/: __init__.py  load.py
OSDEE/__src__/ms/: __init__.py  ms.py
OSDEE/__src__/prim/: __init__.py  prim.py
OSDEE/__src__/utils/: utils.py
OSDEE/__src__/vns/: __init__.py  vns.py
dados/: glob136  glob14  glob33  glob415  glob84  ram136  ram14  ram33  ram415  ram84  teste136  teste14  teste33  teste415  teste84
resultados/iwp20_csq10_msv10_gdq0/2023-04-05T11-52-14/14/ms/466135/: linhas.csv
resultados/iwp20_csq10_msv10_gdq0/2023-04-05T11-52-14/14/ms/479297/: gd.csv  linhas.csv
resultados/iwp20_csq10_msv10_gdq0/2023-04-05T11-52-14/14/ms/492845/: barras.csv
resultados/iwp20_csq10_msv10_gdq0/2023-04-05T11-52-14/14/ms/493162/: barras.csv
resultados/iwp20_csq10_msv10_gdq0/2023-04-05T11-52-14/14/ms/497550/: barras.csv  linhas.csv
resultados/iwp20_csq10_msv10_gdq0/2023-04-05T11-52-14/14/ms/518470/: barras.csv  linhas.csv
resultados/iwp20_csq10_msv10_gdq0/2023-04-05T11-52-14/14/ms/518938/: barras.csv  linhas.csv
resultados/prim/136/: barras.csv  linhas.csv
resultados/prim/33/: barras.csv  linhas.csv
resultados/prim/415/: barras.csv  linhas.csv
resultados/prim/84/: barras.csv  linhas.csv
test/: test_get_graph.py  test_load.py  test_ms.py  test_prim.py  test_set_gd.py  test_set_net_from_id.py  test_vns.py
(+1052 files in other folders)
